Change java version to 11 and leverage new APIs